--- a/src/com/raven/form/Producto_Form.form
+++ b/src/com/raven/form/Producto_Form.form
@@ -93,7 +93,7 @@
                   <Table columnCount="14" rowCount="0">
                     <Column editable="true" title="Estado" type="java.lang.Boolean"/>
                     <Column editable="false" title="#" type="java.lang.Object"/>
-                    <Column editable="false" title="Nombre" type="java.lang.Object"/>
+                    <Column editable="false" title="Nombre y Variedad" type="java.lang.Object"/>
                     <Column editable="false" title="Fecha ingreso" type="java.lang.Object"/>
                     <Column editable="false" title="Marca" type="java.lang.Object"/>
                     <Column editable="false" title="Tipo producto" type="java.lang.Object"/>
