--- a/src/com/raven/crud/ProductosAsociados.form
+++ b/src/com/raven/crud/ProductosAsociados.form
@@ -16,18 +16,22 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" attributes="0">
+          <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Component id="jLabel1" alignment="0" pref="94" max="32767" attributes="0"/>
-                  <Component id="jLabel2" alignment="0" pref="94" max="32767" attributes="0"/>
-                  <Component id="jLabel8" alignment="0" pref="94" max="32767" attributes="0"/>
+              <Group type="103" groupAlignment="1" attributes="0">
+                  <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                      <Component id="jLabel1" alignment="0" pref="94" max="32767" attributes="0"/>
+                      <Component id="jLabel2" alignment="0" pref="94" max="32767" attributes="0"/>
+                      <Component id="jLabel8" alignment="0" pref="94" max="32767" attributes="0"/>
+                  </Group>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="jLabelVerCodigo" min="-2" max="-2" attributes="0"/>
                   <Component id="jLabelVerNombre" min="-2" max="-2" attributes="0"/>
-                  <Component id="jLabelVerNotas" min="-2" max="-2" attributes="0"/>
+                  <Component id="jLabelVerProductos" min="-2" max="-2" attributes="0"/>
+                  <Component id="jLabelNotas" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="64" max="-2" attributes="0"/>
           </Group>
@@ -49,7 +53,12 @@
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jLabel8" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jLabelVerNotas" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jLabelVerProductos" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jLabelNotas" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -72,7 +81,7 @@
     <Component class="javax.swing.JLabel" name="jLabel8">
       <Properties>
         <Property name="horizontalAlignment" type="int" value="11"/>
-        <Property name="text" type="java.lang.String" value="Notas"/>
+        <Property name="text" type="java.lang.String" value="Productos"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabelVerCodigo">
@@ -85,7 +94,17 @@
         <Property name="text" type="java.lang.String" value="Ver Nombre"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabelVerNotas">
+    <Component class="javax.swing.JLabel" name="jLabelVerProductos">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Ver Productos"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="jLabel3">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Notas"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="jLabelNotas">
       <Properties>
         <Property name="text" type="java.lang.String" value="Ver Notas"/>
       </Properties>
