--- a/src/com/raven/form/ChatGPT_Form.form
+++ b/src/com/raven/form/ChatGPT_Form.form
@@ -31,17 +31,17 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Component id="chatArea1" alignment="0" pref="603" max="32767" attributes="0"/>
+              <Component id="chatArea" alignment="0" pref="603" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Component id="chatArea1" alignment="0" pref="531" max="32767" attributes="0"/>
+              <Component id="chatArea" alignment="0" pref="531" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
       </Layout>
       <SubComponents>
-        <Component class="raven.chat.component.ChatArea" name="chatArea1">
+        <Component class="raven.chat.component.ChatArea" name="chatArea">
         </Component>
       </SubComponents>
     </Container>
